<resources>
    <string name="app_name">TLMA2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_drawer">TLMA</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_displaymap">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="check_gps">Check GPS</string>
    <string name="txtview_help">it is a task and locatin mapping alarm Application..Thankyou</string>
    <string name="title_activity_settings_main">settings_mainActivity</string>
    <string name="task_name">Task name</string>
    <string name="task_desc">task Desc</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude:</string>
    <string name="enddate">Enddate</string>
    <string name="endtime">Endtime</string>
    <string name="Btn_cancel">Cancel</string>
    <string name="Btn_save_task">Save</string>
    <string name="add_task_button">Add Task</string>
    <string name="add_new_task">Click +  to add new task</string>
    <string name="select_your_location">Select your location</string>


</resources>
