<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_taskname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:hint="@string/task_name"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_taskdescrip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/task_desc"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Btn_Select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/select_your_location"
            android:textColor="@android:color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Lat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/latitude"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Longitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/longitude"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Btn_Set_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="250dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:elevation="3dp"
            android:text="alarm"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/Btn_Save_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="right"
            android:background="@color/colorAccent"
            android:text="@string/Btn_save_task"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/Btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:background="@color/colorAccent"
            android:text="@string/Btn_cancel"
            android:textColor="@android:color/black"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>